tests/baselines/reference/superCallFromClassThatDerivesNonGenericTypeButWithTypeArguments1.errors.txt
superCallFromClassThatDerivesNonGenericTypeButWithTypeArguments1.ts(7,17): error TS2315: Type 'A' is not generic.


==== superCallFromClassThatDerivesNonGenericTypeButWithTypeArguments1.ts (1 errors) ====
    class A {
        constructor(private map: (value: number) => string) {
    
        }
    }
    
    class B extends A<number, string> {
                    ~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'A' is not generic.
        constructor() { super(value => String(value)); }
    }